# training

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: build_NextJS.yml  build_cpp.yml  envTest.yml
.github/workflows/actions/: printAction.yml
CPP/: CMakeLists.txt  README.md
CPP/src/: CMakeLists.txt  HelloSample.cpp
CPP/src/HelloWorld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h
CPP/tests/: CMakeLists.txt  HelloWorld_test.cpp
MobileApp/photo-gallery/: package-lock.json  package.json
MobileApp/photo-gallery/src/app/services/: photo.service.ts
MobileApp/photo-gallery/src/app/tab2/: tab2.page.html
MobileApp/photo-gallery/src/app/tabs/: tabs.page.html
NextJS/nextjs-blog/: .gitignore
NextJS/nextjs-blog/components/: layout.js
NextJS/nextjs-blog/pages/posts/: [id].js  first-post.js
actions/printAction/: action.yml
